--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ members = [
     "input",
     "on-window-close-quit",
     "opacity",
+    "ownership-post",
+    "painting",
 ]
 resolver = "2"
 
@@ -29,5 +31,7 @@ image-loading = { path = "image-loading" }
 input = { path = "input" }
 on-window-close-quit = { path = "on-window-close-quit" }
 opacity = { path = "opacity" }
+ownership-post = { path = "ownership-post" }
+painting = { path = "painting" }
 rand = "0.9.0"
 image = "0.24.7"
